Adding choosing messenging and API methods

--- a/config.json
+++ b/config.json
@@ -1,3 +1,7 @@
 {
-    "OPEN_AI_APIKEY": "sk-xxx"
+    "OPENAI_API_KEY": "",
+    "DISCORD_AUTHORIZATION": "",
+    "DISCORD_CHANNEL_ID": "",
+    "WEBSOCKET_HOST": "localhost",
+    "WEBSOCKET_PORT": 8765
 }
